// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorFormatEditor should render multiple colors 1`] = `
<Fragment>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "regex",
          "name": <FormattedMessage
            defaultMessage="Pattern (regular expression)"
            id="common.ui.fieldEditor.color.patternLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "field": "text",
          "name": <FormattedMessage
            defaultMessage="Text color"
            id="common.ui.fieldEditor.color.textColorLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "field": "background",
          "name": <FormattedMessage
            defaultMessage="Background color"
            id="common.ui.fieldEditor.color.backgroundLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "name": <FormattedMessage
            defaultMessage="Example"
            id="common.ui.fieldEditor.color.exampleLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "actions": Array [
            Object {
              "available": [Function],
              "color": "danger",
              "description": "Delete color format",
              "icon": "trash",
              "name": "Delete",
              "onClick": [Function],
              "type": "icon",
            },
          ],
        },
      ]
    }
    items={
      Array [
        Object {
          "background": "#ffffff",
          "index": 0,
          "range": "-Infinity:Infinity",
          "regex": "<insert regex>",
          "text": "#000000",
        },
        Object {
          "background": "#ffffff",
          "index": 1,
          "range": "-Infinity:Infinity",
          "regex": "<insert regex>",
          "text": "#000000",
        },
      ]
    }
    noItemsMessage="No items found"
    responsive={true}
  />
  <EuiSpacer
    size="m"
  />
  <EuiButton
    iconType="plusInCircle"
    onClick={[Function]}
    size="s"
  >
    <FormattedMessage
      defaultMessage="Add color"
      id="common.ui.fieldEditor.color.addColorButton"
      values={Object {}}
    />
  </EuiButton>
  <EuiSpacer
    size="l"
  />
</Fragment>
`;

exports[`ColorFormatEditor should render other type normally (range field) 1`] = `
<Fragment>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "range",
          "name": <FormattedMessage
            defaultMessage="Range (min:max)"
            id="common.ui.fieldEditor.color.rangeLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "field": "text",
          "name": <FormattedMessage
            defaultMessage="Text color"
            id="common.ui.fieldEditor.color.textColorLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "field": "background",
          "name": <FormattedMessage
            defaultMessage="Background color"
            id="common.ui.fieldEditor.color.backgroundLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "name": <FormattedMessage
            defaultMessage="Example"
            id="common.ui.fieldEditor.color.exampleLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "actions": Array [
            Object {
              "available": [Function],
              "color": "danger",
              "description": "Delete color format",
              "icon": "trash",
              "name": "Delete",
              "onClick": [Function],
              "type": "icon",
            },
          ],
        },
      ]
    }
    items={
      Array [
        Object {
          "background": "#ffffff",
          "index": 0,
          "range": "-Infinity:Infinity",
          "regex": "<insert regex>",
          "text": "#000000",
        },
      ]
    }
    noItemsMessage="No items found"
    responsive={true}
  />
  <EuiSpacer
    size="m"
  />
  <EuiButton
    iconType="plusInCircle"
    onClick={[Function]}
    size="s"
  >
    <FormattedMessage
      defaultMessage="Add color"
      id="common.ui.fieldEditor.color.addColorButton"
      values={Object {}}
    />
  </EuiButton>
  <EuiSpacer
    size="l"
  />
</Fragment>
`;

exports[`ColorFormatEditor should render string type normally (regex field) 1`] = `
<Fragment>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "regex",
          "name": <FormattedMessage
            defaultMessage="Pattern (regular expression)"
            id="common.ui.fieldEditor.color.patternLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "field": "text",
          "name": <FormattedMessage
            defaultMessage="Text color"
            id="common.ui.fieldEditor.color.textColorLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "field": "background",
          "name": <FormattedMessage
            defaultMessage="Background color"
            id="common.ui.fieldEditor.color.backgroundLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "name": <FormattedMessage
            defaultMessage="Example"
            id="common.ui.fieldEditor.color.exampleLabel"
            values={Object {}}
          />,
          "render": [Function],
        },
        Object {
          "actions": Array [
            Object {
              "available": [Function],
              "color": "danger",
              "description": "Delete color format",
              "icon": "trash",
              "name": "Delete",
              "onClick": [Function],
              "type": "icon",
            },
          ],
        },
      ]
    }
    items={
      Array [
        Object {
          "background": "#ffffff",
          "index": 0,
          "range": "-Infinity:Infinity",
          "regex": "<insert regex>",
          "text": "#000000",
        },
      ]
    }
    noItemsMessage="No items found"
    responsive={true}
  />
  <EuiSpacer
    size="m"
  />
  <EuiButton
    iconType="plusInCircle"
    onClick={[Function]}
    size="s"
  >
    <FormattedMessage
      defaultMessage="Add color"
      id="common.ui.fieldEditor.color.addColorButton"
      values={Object {}}
    />
  </EuiButton>
  <EuiSpacer
    size="l"
  />
</Fragment>
`;
